<?xml version="1.0" encoding="utf-8"?>
<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/chooseLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept_location" />

            <TextView
                android:id="@+id/displayLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_text" />

            <EditText
                android:id="@+id/editTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="minutes"
                android:inputType="numberSigned" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/added_contacts"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/contactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

        </ListView>

        <Button
            android:id="@+id/addContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contact"
            android:visibility="visible" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:text="@string/start_activity" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chooseContactsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9E8A8A8A"
        android:clickable="true"
        android:visibility="invisible">

        <ListView
            android:id="@+id/chooseContacts"
            android:layout_width="333dp"
            android:layout_height="514dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.widget.FrameLayout>