<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/contactsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

    </ListView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9E8A8A8A"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/phoneContactsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9E8A8A8A"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible">

        <ListView
            android:id="@+id/phoneContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/addMessageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#17181818"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/messageText"
                android:layout_width="299dp"
                android:layout_height="163dp"
                android:layout_margin="3dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/add_message_hint"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/acceptMessage"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accept_message" />

                <Button
                    android:id="@+id/decline"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/decline_new_contact" />
            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="#009688"
        app:borderWidth="0.5dp"
        app:fabSize="normal"
        app:hoveredFocusedTranslationZ="6dp"
        app:pressedTranslationZ="6dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/contactInfoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#52181818"
        android:clickable="true"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    app:cardBackgroundColor="#A4FF0202"
                    app:cardCornerRadius="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/contactName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#D30041FF"
                        android:gravity="center"
                        android:textSize="30sp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/contactMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ADFF0000"
                android:gravity="center"
                android:textSize="24sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>